# telegentic

./: .env.example  .gitignore  CLAUDE.md  README.md  example_bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
telegentic/: __init__.py  admin.py  args.py  bot.py
tests/: __init__.py  test_bot.py
