[project]
name = "telegentic"
version = "0.1.0"
description = "Minimal and elegant Telegram bot framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiogram>=3.20.0", "python-dotenv>=1.0.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "telegentic[fastapi]",
]

[tool.uv.sources]
telegentic = { workspace = true }
